[gd_scene load_steps=10 format=2]

[ext_resource path="res://scene/tabletop/board/Step.gd" type="Script" id=1]
[ext_resource path="res://asset/color.png" type="Texture" id=2]
[ext_resource path="res://scene/tabletop/board/Cards.gd" type="Script" id=3]
[ext_resource path="res://scene/tabletop/board/Card.gd" type="Script" id=4]
[ext_resource path="res://scene/tabletop/board/Card1.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 109.975, 145.016 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 110.117, 16.8752 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 91.5, 135.032 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 44.4378, 66.0483 )

[node name="Step" type="Node2D"]
scale = Vector2( 1, 1.0032 )
script = ExtResource( 1 )

[node name="Target" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Target"]
position = Vector2( 110, 145 )
scale = Vector2( 2.2, 2.9 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Target"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Area2D"]
position = Vector2( 110, 145 )
shape = SubResource( 1 )

[node name="Title" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Title"]
position = Vector2( 110, 323.5 )
scale = Vector2( 2.2, 0.33 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Title"]
margin_top = 307.0
margin_right = 220.0
margin_bottom = 340.0
text = "Hello World !"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Title"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title/Area2D"]
position = Vector2( 110, 323 )
shape = SubResource( 2 )

[node name="Card" type="Node2D" parent="."]
visible = false
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Card"]
position = Vector2( 15.874, 7.91169 )
scale = Vector2( 0.0927322, 0.0927322 )
centered = false
region_enabled = true
region_rect = Rect2( 85, 15, 2025, 2960 )

[node name="Area2D" type="Area2D" parent="Card"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card/Area2D"]
position = Vector2( 110, 145 )
shape = SubResource( 3 )

[node name="Cards" type="Node2D" parent="."]
visible = false
script = ExtResource( 3 )

[node name="Card" type="Node2D" parent="Cards"]
visible = false
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Cards/Card"]
position = Vector2( 10.874, 4.92126 )
scale = Vector2( 0.046482, 0.046482 )
centered = false
region_enabled = true
region_rect = Rect2( 85, 15, 2025, 2960 )

[node name="Area2D" type="Area2D" parent="Cards/Card"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cards/Card/Area2D"]
position = Vector2( 59, 73.7289 )
shape = SubResource( 4 )

[node name="Card2" type="Node2D" parent="Cards"]
visible = false
script = ExtResource( 5 )
cardId = 1

[node name="Sprite" type="Sprite" parent="Cards/Card2"]
position = Vector2( 114, 5.91808 )
scale = Vector2( 0.0462502, 0.0462502 )
centered = false
region_enabled = true
region_rect = Rect2( 85, 15, 2025, 2960 )

[node name="Area2D" type="Area2D" parent="Cards/Card2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cards/Card2/Area2D"]
position = Vector2( 161.027, 73.7289 )
shape = SubResource( 4 )

[node name="Card3" type="Node2D" parent="Cards"]
visible = false
script = ExtResource( 5 )
cardId = 2

[node name="Sprite" type="Sprite" parent="Cards/Card3"]
position = Vector2( 10.874, 147.492 )
scale = Vector2( 0.046482, 0.046482 )
centered = false
region_enabled = true
region_rect = Rect2( 85, 15, 2025, 2960 )

[node name="Area2D" type="Area2D" parent="Cards/Card3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cards/Card3/Area2D"]
position = Vector2( 59, 215.071 )
shape = SubResource( 4 )

[node name="Card4" type="Node2D" parent="Cards"]
visible = false
script = ExtResource( 5 )
cardId = 3

[node name="Sprite" type="Sprite" parent="Cards/Card4"]
position = Vector2( 114, 147.492 )
scale = Vector2( 0.0462502, 0.0462502 )
centered = false
region_enabled = true
region_rect = Rect2( 85, 15, 2025, 2960 )

[node name="Area2D" type="Area2D" parent="Cards/Card4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cards/Card4/Area2D"]
position = Vector2( 161.027, 215.071 )
shape = SubResource( 4 )

[connection signal="area_entered" from="Target/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Target/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="mouse_entered" from="Target/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Target/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="p_card" from="Card" to="." method="_on_Card_p_card"]
[connection signal="input_event" from="Card/Area2D" to="Card" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Card/Area2D" to="Card" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Card/Area2D" to="Card" method="_on_Area2D_mouse_exited"]
[connection signal="p_card" from="Cards/Card" to="." method="_on_Card_p_card"]
[connection signal="input_event" from="Cards/Card/Area2D" to="Cards/Card" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Cards/Card/Area2D" to="Cards/Card" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Cards/Card/Area2D" to="Cards/Card" method="_on_Area2D_mouse_exited"]
[connection signal="p_card" from="Cards/Card2" to="." method="_on_Card_p_card"]
[connection signal="input_event" from="Cards/Card2/Area2D" to="Cards/Card2" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Cards/Card2/Area2D" to="Cards/Card2" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Cards/Card2/Area2D" to="Cards/Card2" method="_on_Area2D_mouse_exited"]
[connection signal="p_card" from="Cards/Card3" to="." method="_on_Card_p_card"]
[connection signal="input_event" from="Cards/Card3/Area2D" to="Cards/Card3" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Cards/Card3/Area2D" to="Cards/Card3" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Cards/Card3/Area2D" to="Cards/Card2" method="_on_Area2D_mouse_exited"]
[connection signal="p_card" from="Cards/Card4" to="." method="_on_Card_p_card"]
[connection signal="input_event" from="Cards/Card4/Area2D" to="Cards/Card4" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Cards/Card4/Area2D" to="Cards/Card4" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Cards/Card4/Area2D" to="Cards/Card4" method="_on_Area2D_mouse_exited"]
